--- a/docs/_org/usage_jamming.org
+++ b/docs/_org/usage_jamming.org
@@ -1,4 +1,4 @@
-*** Overview of 'harpwise jamming'
+** Overview of 'harpwise jamming'
 
   Scripted jamming along a backing track. For this harpwise includes a
   backing-track with timestamps as well as a matching set of licks and
@@ -6,12 +6,15 @@
   and chords in sync with the track.
 
 
-*** Usage by Examples
+** Usage by Examples
 
   The mode jamming is a remote control and helper for harpwise in mode
   listen; jamming plays a backing-track while making listen switch licks
   and chords (scales). This happens in time with the chord-changes of the
   track by means of a time-table (see below).
+
+  The screen of listen, shows iteration, current chord and seconds left in the first line,
+  making orientation easy.
 
 
   To use harpwise jamming, you need *two* terminals. In the first one
@@ -153,7 +156,7 @@
       An empty (or whitespace only) note will be removed altogether.
 
 
-*** Quick Start
+** Quick Start
 
     #+begin_src 
     harpwise jam along 12
