--- a/docs/erb-org/usage_play.erb.org
+++ b/docs/erb-org/usage_play.erb.org
@@ -1,4 +1,4 @@
-*** Overview of 'harpwise play'
+** Overview of 'harpwise play'
 
   The mode 'play' takes its arguments (holes, notes, semitones, licks,
   scales) and plays them.  It also handles some extra keywords.
@@ -20,7 +20,7 @@
 <%= get_extra_desc_all(mode: :play, for_usage: true).join("\n") %>
 
 
-*** Usage by Examples
+** Usage by Examples
 
   Play a few holes and notes on a harp of key c:
 
