new quiz flavor inter-song; rename scale 'all' to 'full'

--- a/docs/_org/usage_quiz.org
+++ b/docs/_org/usage_quiz.org
@@ -11,13 +11,13 @@
   pressing ctrl-z.  For a chosen flavour, questions of this flavour
   are asked in an endless loop.
 
-The available 29 flavours are:
+The available 30 flavours are:
 
     - all, ran, random:
-      all flavours, one at random
+      any and all flavours, one at random
 
     - scales:
-      flavours related with scales at random
+      flavours related with scales
 
     - mic:
       flavours, that use the microphone; most of them switch to
@@ -61,6 +61,10 @@ The available 29 flavours are:
 
     - hear-inter:
       plays an interval and asks for its name
+
+    - inter-song:
+      names an interval and ask for the mnemonic-song that starts with
+      this interval. Or the other way around from song to interval
 
     - add-inter:
       gives a hole and an interval and asks for the resulting hole,
@@ -166,10 +170,10 @@ The available 29 flavours are:
 
   is valid as well (but would choose a richter harp).
 
-  This example removes drawbends from the scale 'all':
+  This example removes drawbends from the scale 'fulll':
 
     #+begin_src 
-    harpwise quiz all replay 5 --remove-scales drawbends
+    harpwise quiz full replay 5 --remove-scales drawbends
     #+end_src
 
   this example also relies on the default of 5 holes to be played.
