--- a/docs/_org/index.org
+++ b/docs/_org/index.org
@@ -150,16 +150,17 @@ arguments may be given:
     'ds' (d sharp). If omitted, this defaults to 'c'.
 
   - scale: scale on which you want to concentrate, e.g. 'blues',
-    'major_pentatonic' or 'all'; defaults to 'blues'.
+    'major_pentatonic' or 'full'; defaults to 'blues'.
 
     Note, that most scales are notated in second position (e.g. key of
     g for a c-harp); you may use the option --transpose-scale to
     change this.
 
-    Harmonica-charts (e.g. in mode listen) show a one-letter shorthand
-    of the scale, e.g. 'b' for 'blues'; you may supply your own letter
-    after a colon, e.g. 'blues:B', which results in 'B' instead of the
-    default 'b' beeing shown.
+    Also note, that scales can be abbreviated. This is useful for
+    harmonica-charts (e.g. in mode listen); a chart shows a one-letter
+    abbreviation of the scale, e.g. 'b' for 'blues'; for this you may
+    supply your own letter after a colon, e.g. 'blues:B', which results in
+    'B' instead of the default 'b' beeing shown in charts.
 
 
 Some modes (e.g. listen, licks, play) accept additional arguments on
@@ -207,10 +208,10 @@ blues-scale, which are given as arguments and form an adhoc scale:
 
 The possible scales depend on the chosen type of harmonica:
 
-  scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, mape, one, two
-  scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, drawbends, major, major-full, 
+  scales for chromatic: blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, full, mape, one, two
+  scales for richter: blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, drawbends, full, major, major-full, 
     major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, 
     mipe, mixolydian
 
@@ -462,13 +463,13 @@ chords. It knows a bit about tempo, but has no notion of rhythm.
   pressing ctrl-z.  For a chosen flavour, questions of this flavour
   are asked in an endless loop.
 
-The available 29 flavours are:
+The available 30 flavours are:
 
     - all, ran, random:
-      all flavours, one at random
+      any and all flavours, one at random
 
     - scales:
-      flavours related with scales at random
+      flavours related with scales
 
     - mic:
       flavours, that use the microphone; most of them switch to
@@ -512,6 +513,10 @@ The available 29 flavours are:
 
     - hear-inter:
       plays an interval and asks for its name
+
+    - inter-song:
+      names an interval and ask for the mnemonic-song that starts with
+      this interval. Or the other way around from song to interval
 
     - add-inter:
       gives a hole and an interval and asks for the resulting hole,
@@ -617,10 +622,10 @@ The available 29 flavours are:
 
   is valid as well (but would choose a richter harp).
 
-  This example removes drawbends from the scale 'all':
+  This example removes drawbends from the scale 'fulll':
 
     #+begin_src 
-    harpwise quiz all replay 5 --remove-scales drawbends
+    harpwise quiz full replay 5 --remove-scales drawbends
     #+end_src
 
   this example also relies on the default of 5 holes to be played.
@@ -1646,7 +1651,7 @@ The available 29 flavours are:
   or even:
 
     #+begin_src 
-    harpwise play all
+    harpwise play full
     #+end_src
 
 
