--- a/docs/_org/usage.org
+++ b/docs/_org/usage.org
@@ -46,16 +46,17 @@ arguments may be given:
     'ds' (d sharp). If omitted, this defaults to 'c'.
 
   - scale: scale on which you want to concentrate, e.g. 'blues',
-    'major_pentatonic' or 'all'; defaults to 'blues'.
+    'major_pentatonic' or 'full'; defaults to 'blues'.
 
     Note, that most scales are notated in second position (e.g. key of
     g for a c-harp); you may use the option --transpose-scale to
     change this.
 
-    Harmonica-charts (e.g. in mode listen) show a one-letter shorthand
-    of the scale, e.g. 'b' for 'blues'; you may supply your own letter
-    after a colon, e.g. 'blues:B', which results in 'B' instead of the
-    default 'b' beeing shown.
+    Also note, that scales can be abbreviated. This is useful for
+    harmonica-charts (e.g. in mode listen); a chart shows a one-letter
+    abbreviation of the scale, e.g. 'b' for 'blues'; for this you may
+    supply your own letter after a colon, e.g. 'blues:B', which results in
+    'B' instead of the default 'b' beeing shown in charts.
 
 
 Some modes (e.g. listen, licks, play) accept additional arguments on
@@ -103,10 +104,10 @@ blues-scale, which are given as arguments and form an adhoc scale:
 
 The possible scales depend on the chosen type of harmonica:
 
-  scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, mape, one, two
-  scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-iv, 
-    chord-iv7, chord-v, chord-v7, drawbends, major, major-full, 
+  scales for chromatic: blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, full, mape, one, two
+  scales for richter: blues, blues-middle, chord-i, chord-i7, chord-iv, 
+    chord-iv7, chord-v, chord-v7, drawbends, full, major, major-full, 
     major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, 
     mipe, mixolydian
 
