--- a/resources/players.org
+++ b/resources/players.org
@@ -238,6 +238,8 @@
    
   - Backing both Muddy Waters and Big Mama Thornton
   - Influenced William Clarke and Rod Piazza
+  - His mother tought him harmonica at the age of 4
+  - Traveled the south during 1930s and 40s
 
 ** sources
   
@@ -245,7 +247,8 @@
     https://en.wikipedia.org/wiki/George_%22Harmonica%22_Smith
 
 ** songs
-   
+
+  - Telephone Blues
   - Last Night
   - Teardrops Falling
 
