show pos in lick- and scale-prog

--- a/resources/players.org
+++ b/resources/players.org
@@ -215,7 +215,9 @@
   - Recorded with Steve James, Nick Curran, Jimmie Vaughan
     and many others
   - Released an instructional double CD, Blues Harmonica:
-    "The Blues And Beyond"
+    The Blues And Beyond
+  - Conducted workshops with Howard Levy, Magic Dick, Gary
+    Smith, Lee Oskar, Jerry Portnoy
 
 ** sources
   
