--- a/docs/erb-org/usage_quiz.erb.org
+++ b/docs/erb-org/usage_quiz.erb.org
@@ -1,17 +1,22 @@
 ** Overview of 'harpwise quiz'
 
-  The mode 'quiz' is a quiz on music theory, ear and memory. It is
-  meant as a fun way to increase your musical abilities. Quiz comes in
-  different flavours. It issues questions and asks for an answer. Most
-  flavours involve holes beeing played either as part of the question
-  or the answer.
+  The mode 'quiz' is a quiz on music theory, ear and memory. It is meant
+  as a fun way to increase your musical abilities. Quiz comes in different
+  flavours (see below). It issues questions and asks for answers.
 
-  Every time you invoke harpwise with mode 'quiz', a flavour is
-  chosen; to try another flavour, just restart harpwise, e.g. by
-  pressing ctrl-z.  For a chosen flavour, questions of this flavour
-  are asked in an endless loop.
+  All flavours offer various sorts of help, allowing to view and explore
+  the question at hand from a different angle.
 
-The available <%= $extras_joined_to_desc[:quiz].length %> flavours are:
+  If you invoke mode 'quiz' with the argument 'random' (or 'ran'), a
+  flavour is chosen at random. To try another flavour, just restart
+  harpwise, e.g. by pressing ctrl-z.  For a chosen flavour, different
+  questions of this flavour are asked in an endless loop.
+  
+  There are <%= $extras_joined_to_desc[:quiz].length %> flavours of quiz
+  listed below; however, you do not need to memorize them, as they will be
+  explained on the spot when they appear.
+
+  For an overview, here are the available flavours:
 
 <%= get_extra_desc_all(mode: :quiz, for_usage: true).join("\n") %>
   
@@ -28,10 +33,11 @@ The available <%= $extras_joined_to_desc[:quiz].length %> flavours are:
   To switch to a different, random mode, issue signal ctrl-z.
 
 
-  Some examples that choose a quiz flavour explicitly:
+  Some examples that choose a quiz flavour or a collection of flavours
+  explicitly:
   
 
-  Wise plays 3 notes from the scale major_pentatonic for a
+  Wise plays 5 notes from the scale major_pentatonic for a
   chromatic harmonica of key a and then asks you to play them
   back (then repeat):
 
@@ -49,13 +55,17 @@ The available <%= $extras_joined_to_desc[:quiz].length %> flavours are:
 
   is valid as well (but would choose a richter harp).
 
-  This example removes drawbends from the scale 'fulll':
+
+  This example chooses the a flavour-collection:
 
     #+begin_src 
-    harpwise quiz full replay 5 --remove-scales drawbends
+    harpwise quiz no-mic
     #+end_src
 
-  this example also relies on the default of 5 holes to be played.
+  the collection 'no-mic' includes a number of different flavours, which
+  have in common, that they do not need your microphone and do not require
+  you to play your harp. This can be helpful e.g. when quizzing in public
+  transport.
 
 
   Wise plays a scale and asks you for its name:
@@ -69,3 +79,7 @@ The available <%= $extras_joined_to_desc[:quiz].length %> flavours are:
     #+begin_src 
     harpwise quiz ran
     #+end_src
+
+
+  And at any time, type 'ctrl-z' to try another flavour.
+  
