--- a/docs/_org/usage.org
+++ b/docs/_org/usage.org
@@ -108,8 +108,8 @@ The possible scales depend on the chosen type of harmonica:
     chord-iv7, chord-v, chord-v7, full, mape, one, two
 - scales for richter :: blues, blues-middle, chord-i, chord-i7, chord-iv, 
     chord-iv7, chord-v, chord-v7, drawbends, full, major, major-full, 
-    major-pentatonic, mape, mape4, mape5, middle, minor, minor-pentatonic, 
-    mipe, mixolydian
+    major-pentatonic, mape, mape-middle, mape4, mape5, middle, minor, 
+    minor-pentatonic, mipe, mipe-middle, mixolydian
 
 Note that advanced users may try to create their own scales. See
 usage of mode tools for an example.
