--- a/docs/_org/usage_print.org
+++ b/docs/_org/usage_print.org
@@ -80,6 +80,9 @@ Overview of 'harpwise print':
       which however has a more relaxed way of specifying the jam.
       See there for details.
 
+    - chart,charts:
+      Print harmonica chart, just like "harpwise tools chart"
+
 
   
 Usage by Examples:
