--- a/docs/_org/usage_tools.org
+++ b/docs/_org/usage_tools.org
@@ -55,8 +55,11 @@
     - progression, prog:
       take a base and some semitone diffs, then spell them out
 
+    - all-intervals, all-inters:
+      print all known intervals against the given note or hole
+
     - interval, inter:
-      calculate and print interval between two notes
+      calculate and print interval between two notes or holes
 
     - chords:
       print chords i, iv and v for current key
